api_versioned_docs/version-12.1.1/avalonia/controls/hierarchicalexpandercolumncreateoptions-1.mdx
---
title: 'HierarchicalExpanderColumnCreateOptions<TModel>'
hide_title: true
slug: '/avalonia/controls/hierarchicalexpandercolumncreateoptions-1'
uid: 'Avalonia.Controls.HierarchicalExpanderColumnCreateOptions`1'
commentId: 'T:Avalonia.Controls.HierarchicalExpanderColumnCreateOptions`1'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.TreeDataGrid'
assembly: 'Avalonia.Controls.TreeDataGrid'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls'
tfms:
  - 'net8.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">HierarchicalExpanderColumnCreateOptions&lt;TModel&gt; Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.TreeDataGrid</code>
</div>
</div>

<div className="apiref-page__lead">

Holds options for a hierarchical expander column created via
[Avalonia.Controls.TreeDataGridSourceExtensions.WithHierarchicalExpanderColumn&lt;T&gt;(Avalonia.Controls.HierarchicalTreeDataGridSource&#123;&lt;&gt;&#125;,object,Avalonia.Controls.TreeDataGridColumn,System.Linq.Expressions.Expression&#123;Func&#123;&lt;&gt;,System.Collections.Generic.IEnumerable&#123;&lt;&gt;&#125;&#125;&#125;,System.Linq.Expressions.Expression&#123;Func&#123;&lt;&gt;,bool&#125;&#125;,System.Linq.Expressions.Expression&#123;Func&#123;&lt;&gt;,bool&#125;&#125;,Action&#123;Avalonia.Controls.HierarchicalExpanderColumnCreateOptions&#123;&lt;&gt;&#125;&#125;)](xref:Avalonia.Controls.TreeDataGridSourceExtensions.WithHierarchicalExpanderColumn%60%601%28Avalonia.Controls.HierarchicalTreeDataGridSource%7B%60%600%7D%2CSystem.Object%2CAvalonia.Controls.TreeDataGridColumn%2CSystem.Linq.Expressions.Expression%7BSystem.Func%7B%60%600%2CSystem.Collections.Generic.IEnumerable%7B%60%600%7D%7D%7D%2CSystem.Linq.Expressions.Expression%7BSystem.Func%7B%60%600%2CSystem.Boolean%7D%7D%2CSystem.Linq.Expressions.Expression%7BSystem.Func%7B%60%600%2CSystem.Boolean%7D%7D%2CSystem.Action%7BAvalonia.Controls.HierarchicalExpanderColumnCreateOptions%7B%60%600%7D%7D%29).

</div>

<div className="apiref-page__signature">

```csharp
public class HierarchicalExpanderColumnCreateOptions<TModel>
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> <a href="columncreateoptions">ColumnCreateOptions</a> <span className="apiref-page__relation-separator">-&gt;</span> HierarchicalExpanderColumnCreateOptions&lt;TModel&gt;
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [HierarchicalExpanderColumnCreateOptions&lt;TModel&gt;](#uid-b4d1e91034) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-b4d1e91034"></span>

### HierarchicalExpanderColumnCreateOptions&lt;TModel&gt; Constructor

```csharp
public HierarchicalExpanderColumnCreateOptions<TModel>()
```

</section>

## Properties

| Name | Description |
| --- | --- |
| [AllowTriStateSorting](columncreateoptions.mdx#uid-2d3c781356) | Gets or sets whether the user can cycle through ascending, descending, and unsorted states when clicking the column header. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [BeginEditGestures](columncreateoptions.mdx#uid-a7d933d9bd) | Gets or sets the gesture(s) that will cause a cell to enter edit mode. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CanUserResize](columncreateoptions.mdx#uid-265c20fcbb) | Gets or sets a value indicating whether the user can resize a column by dragging. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CanUserSort](columncreateoptions.mdx#uid-3860b5729a) | Gets or sets a value indicating whether the user can sort a column by clicking. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CompareAscending](columncreateoptions.mdx#uid-5685462157) | Gets or sets a custom comparison for ascending ordered columns. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [CompareDescending](columncreateoptions.mdx#uid-49dcda7052) | Gets or sets a custom comparison for descending ordered columns. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [HorizontalContentAlignment](columncreateoptions.mdx#uid-b48fbd7d1b) | Gets or sets the horizontal alignment of the cell content. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [MaxWidth](columncreateoptions.mdx#uid-4554236b2f) | Gets or sets the maximum width for a column. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [MinWidth](columncreateoptions.mdx#uid-1776db3e6c) | Gets or sets the minimum width for a column. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [VerticalContentAlignment](columncreateoptions.mdx#uid-77a5b34ee7) | Gets or sets the vertical alignment of the cell content. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |
| [Width](columncreateoptions.mdx#uid-3cd08b17fd) | Gets or sets the column width. Inherited from [ColumnCreateOptions](columncreateoptions.mdx). |

</ApiRefPage>

